--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 <h1>Expedition 'new '</h1>
 
 <h1>Expedition 'new branchh refactoring  '</h1>
+<h1>Expedition 'first commit  '</h1>
+<h1>Expedition 'Documentation commit '</h1>
+<h1>Expedition 'factoring commit '</h1>
     </header>
 
     <div class="container">
